--- a/CSS/common.css
+++ b/CSS/common.css
@@ -114,7 +114,7 @@ li {
 
 .about_img {  
   display: block;
-  width: 200px;
+  width: 300px;
   height: 300px;
   margin: 0 auto 30px;
   border-radius: 50%;
@@ -123,18 +123,23 @@ li {
 
 .skill_item {
   display:flex;
-  margin: 0 150px 50px 150px;
+  margin: 0 120px 50px 120px;
 }
 
 .skill_img {
+  
   margin-right: 20px;
 }
 
 .skill_img img {
   width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  
 }
 
 .work_all {
+  margin: 100px;
   display: flex;
   flex-wrap: wrap;
 }
